--- a/TODO.txt
+++ b/TODO.txt
@@ -1,30 +1,30 @@
-
-  "PICKERS"
-    Write "Phone number pick", take it from email addresses (or )
-    Sort out .sort(...).sort(...) -> two sortBy entry in URL https://github.com/SitePen/dstore/issues/48
-
   "MESSAGES"
 
   *****
-    Turn contats screen into a multi-tab screen
-    Change interface to allow editing, opening of contacts
-    Write screen to open up a contact
-    Add ability to add a message under a contact, cc'ing other contacts (using contact lookup widget)    
-    Ability to set message as SMS or email. Editing widget will change accordingly
-    Amend "message under a contact" so that it can send messages to anybody (take out default one)
+    X Change interface to allow editing, opening of contacts
+    X Turn contats screen into a multi-tab screen
+      Make a new tab open reliably when contact is selected (handle multiple openings)
+      Create screen to show a contact
+      Add ability to add a message under a contact, cc'ing other contacts (using contact lookup widget)    
+      Ability to set message as SMS or email. Editing widget will change accordingly
+      Amend "message under a contact" so that it can send messages to anybody (take out default one)
+
+    Sort out .sort(...).sort(...) -> two sortBy entry in URL https://github.com/SitePen/dstore/issues/48
 
   ----------------------
-  DEADLINE: 30 Aug 2014
+  DEADLINE: 10 Sept  2014
   ----------------------
 
   "SEND SMS/EMAIL, GATEWAY"
 
-  * Write messages infrastructure, where app can send messages (email, sms) and then a queue manager sends them recording the status. Write modules to send (smtp/sms gateway) _and_ receive (pop/sms gateway) messages.
-  * Integrate message-sending with the current simple comment infrastructure (!). 
-  * Develop the "inbox" for incoming emails/SMSes, mark as read, archived, etc. 
+  ***************
+    Write messages infrastructure
+      Write messages infrastructure, where app can send messages (email, sms) and then a queue manager sends them recording the status. Write modules to send (smtp/sms gateway) _and_ receive (pop/sms gateway) messages.
+      Integrate message-sending with the current simple comment infrastructure (!). 
+      Develop the "inbox" for incoming emails/SMSes, mark as read, archived, etc. 
 
   ----------------------
-  DEADLINE: 30 Aug 2014
+  DEADLINE: 30 Sept 2014
   ----------------------
 
   "USERS AND INVITES"
@@ -36,7 +36,7 @@
     added to that workspace (UsersWorkspaces store)
 
   ---------------------
-  DEADLINE: 5 Sep 2014
+  DEADLINE: 10 Oct 2014
   ---------------------
 
   "DATABASE FINAL TOUCHES"
@@ -44,7 +44,7 @@
   * Write function to run _completeRecord on each record of a collection, add it to simpleDbLayer
 
   ---------------------
-  DEADLINE: 10 Sep 2014
+  DEADLINE: 15 Oct 2014
   ---------------------
 
   "WORKSPACE MANAGEMENT"
@@ -74,7 +74,7 @@
   * Make God application separate, with separate login (only God can login)
 
   * Have a look at hotDojoWidgets/lib/hotDojoWidgets.js, image in head will appear, might be good for the app
-  * Create admin interface for things
+  * Create admin interface for missing tasks
 
   ----------------------
   DEADLINE: 15 Nov  2014
@@ -928,6 +928,11 @@
       [X] Use default sorting for main contacts screen too
       [X] Focus on search box when opening window
       [X] Edit icon to edit
+    Write "Phone number pick", take it from email addresses (or )
+     X Rename WorkspacesContactsEmailsPicker back to WorkspacesContactsPicker
+     X Take out "Picker" from WorkspacesContactsEmailsPicker onto its own file
+     X Make sure output is different if type is "PhoneNumber"
+     X Test it
 
 
 
