--- a/TODO.txt
+++ b/TODO.txt
@@ -3,28 +3,20 @@
   *****
     X Change interface to allow editing, opening of contacts
     X Turn contats screen into a multi-tab screen
-      Make a new tab open reliably when contact is selected (handle multiple openings)
-      Create screen to show a contact
-      Add ability to add a message under a contact, cc'ing other contacts (using contact lookup widget)    
-      Ability to set message as SMS or email. Editing widget will change accordingly
-      Amend "message under a contact" so that it can send messages to anybody (take out default one)
+    X Make a new tab open reliably when contact is selected (handle multiple openings)
+    X Create screen to show a contact
+    X Write basic database fields for the 5 messages table (3 core, 2 app)
+    - Add ability to add a message under a contact (SMS/mail) cc'ing other contacts (w/contact lookup widget)    - Write hooks to message store to actually add messages to the right spots
+    - Write cron job to go through message queue and actually attempt to send
+    - Write nice architecture to receive SMS and email, make it nice and open to future messaging systems
+    - Show the message inbox
+    - Enrich message inbox so that it has widgets to 1) Match 'From' 2) Archive 3) Mark as important
+    - Amend "message under a contact" so that it can send messages to anybody (take out default one)
 
     Sort out .sort(...).sort(...) -> two sortBy entry in URL https://github.com/SitePen/dstore/issues/48
 
   ----------------------
-  DEADLINE: 10 Sept  2014
-  ----------------------
-
-  "SEND SMS/EMAIL, GATEWAY"
-
-  ***************
-    Write messages infrastructure
-      Write messages infrastructure, where app can send messages (email, sms) and then a queue manager sends them recording the status. Write modules to send (smtp/sms gateway) _and_ receive (pop/sms gateway) messages.
-      Integrate message-sending with the current simple comment infrastructure (!). 
-      Develop the "inbox" for incoming emails/SMSes, mark as read, archived, etc. 
-
-  ----------------------
-  DEADLINE: 30 Sept 2014
+  DEADLINE: 20 Sep 2014
   ----------------------
 
   "USERS AND INVITES"
@@ -35,24 +27,21 @@
     normal welcome page 2) Adding a hook to register and login, so that if that session variable is set, the created user will be
     added to that workspace (UsersWorkspaces store)
 
-  ---------------------
-  DEADLINE: 10 Oct 2014
-  ---------------------
-
-  "DATABASE FINAL TOUCHES"
-
-  * Write function to run _completeRecord on each record of a collection, add it to simpleDbLayer
-
-  ---------------------
-  DEADLINE: 15 Oct 2014
-  ---------------------
-
   "WORKSPACE MANAGEMENT"
 
   * Add a "user management" section in settings for workspace Admins only
   * Write a "message browser" for the workspace admin so that they can see exactly what was sent, when, and see the logs
   * Write a "log browser" for workspace owners and for God to see what happened, with filters
+
+  ---------------------
+  DEADLINE: 30 Sep 2014
+  ---------------------
+
   * Decide on permissions/permissions model, maybe follow Drupal's
+
+  ---------------------
+  DEADLINE: 15 Oct 2014
+  ---------------------
 
   "BOOKINGS"
 
@@ -62,7 +51,7 @@
 
   ** Implement simple TODO list for the bookings, date/time from, date/time to, who
  
-  ** Add calendar (Dojox's), rendering users' birthdays and TODO items in it
+  ** Add calendar (Dojox's), rendering users' birthdays and TODO items and bookings in it
 
   ---------------------
   DEADLINE: 30 Oct 2014
@@ -75,6 +64,10 @@
 
   * Have a look at hotDojoWidgets/lib/hotDojoWidgets.js, image in head will appear, might be good for the app
   * Create admin interface for missing tasks
+
+  "DATABASE FINAL TOUCHES"
+
+  * Write function to run _completeRecord on each record of a collection, add it to simpleDbLayer
 
   ----------------------
   DEADLINE: 15 Nov  2014
@@ -90,6 +83,10 @@
   ---------------------
   DEADLINE: 30 Nov 2014
   ---------------------
+
+                         --------------------------------------
+                          TONY, FINISH ALL THIS BY DECEMBER!!!
+                         --------------------------------------
 
   "ADVANCED BOOKINGS"
 
