--- a/TODO.txt
+++ b/TODO.txt
@@ -1,22 +1,31 @@
   "MESSAGES"
 
   *****
-    X Change interface to allow editing, opening of contacts
-    X Turn contats screen into a multi-tab screen
-    X Make a new tab open reliably when contact is selected (handle multiple openings)
-    X Create screen to show a contact
-    X Write basic database fields for the 5 messages table (3 core, 2 app)
-    - Add ability to add a message under a contact (SMS/mail) cc'ing other contacts (w/contact lookup widget)    - Write hooks to message store to actually add messages to the right spots
-    - Write cron job to go through message queue and actually attempt to send
-    - Write nice architecture to receive SMS and email, make it nice and open to future messaging systems
+    GUI 2/2:
+    - Add ability to configure twillo (God): add shared phone numbers, API key
+    - Add ability to configure email (God): default SMTP
+    - Add ability to configure email (ws): address, SMTP, IMAP address, IMAP password, poll interval
+    SERVER 1/2:
+    - Write hooks to workspaceMessage store to actually add messages to the right spots using API
+    - Render messages well enough properly in list
+    SERVER 2/2:
+    - Add program-side export of configuration based on type/recipient in BD
+    - Write cron job to go through message queue and actually attempt to re-send
+    - Write twillo layer to actually send the SMSes
+    - Write email layer to actually send emails
+    - Write email and phone number validations, puke if invalid
+    GUI:
+    - Render messages properly in list (beginning of email)
+    - Add extra popup to see full email
     - Show the message inbox
+    - Make sure there are incoming messages in queue, display them
     - Enrich message inbox so that it has widgets to 1) Match 'From' 2) Archive 3) Mark as important
-    - Amend "message under a contact" so that it can send messages to anybody (take out default one)
+    - Add tabs "all", "sent", "received"
 
     Sort out .sort(...).sort(...) -> two sortBy entry in URL https://github.com/SitePen/dstore/issues/48
 
   ----------------------
-  DEADLINE: 20 Sep 2014
+  DEADLINE: 30 Sep 2014
   ----------------------
 
   "USERS AND INVITES"
@@ -30,11 +39,10 @@
   "WORKSPACE MANAGEMENT"
 
   * Add a "user management" section in settings for workspace Admins only
-  * Write a "message browser" for the workspace admin so that they can see exactly what was sent, when, and see the logs
   * Write a "log browser" for workspace owners and for God to see what happened, with filters
 
   ---------------------
-  DEADLINE: 30 Sep 2014
+  DEADLINE: 10 Oct 2014
   ---------------------
 
   * Decide on permissions/permissions model, maybe follow Drupal's
@@ -61,9 +69,7 @@
 
   * Make up God permissions mixin, setting God, add them
   * Make God application separate, with separate login (only God can login)
-
   * Have a look at hotDojoWidgets/lib/hotDojoWidgets.js, image in head will appear, might be good for the app
-  * Create admin interface for missing tasks
 
   "DATABASE FINAL TOUCHES"
 
@@ -79,6 +85,14 @@
   **** Allow to sync contacts with Facebook
   **** Allow to sync contacts with G+
   * Add buttons to re-sync all contacts from specified modules
+
+  ----------------------
+  DEADLINE: 20 Nov  2014
+  ----------------------
+
+  "GET PAID!"
+  * Add accounting for SMSes: add credit, check credit before sending, check credit in queue
+  * Add way to get paid and add credit (Paypal, or more likely stripe, better API)
 
   ---------------------
   DEADLINE: 30 Nov 2014
@@ -526,7 +540,7 @@
     - DONE Finish Observable.js properly, so that it extends notify() and actually works 100%
     - DONE Change storeNotify.js so that notify is called with the new parameter (or a new message altogether?)
     - DONE Change the after header, if after is null, send an empty header and not lame string 'null'
-		- DONE Change JsonRestStores so that it has a "order" field that gets set according to the passed options.before
+    - DONE Change JsonRestStores so that it has a "order" field that gets set according to the passed options.before
     - DONE Change dojo/store/Memory.js so that it keeps into consideration "before" and "relocation" (AAAAAAAAHHHHHHHHHH!!!!!!!)
     - DONE Fix MongoDb so that it uses an easier way of doing the counting
     - DONE (Not done, useless burden on Dgrid) Change DnD.js so that it sends a FAKE EMPTY field when `reposition` is true
@@ -575,9 +589,9 @@
     - Add to EditableList the ability to define an extra widget, and display the new Widget in a dialog without repeating code
     - Have "preset" text that disappeares in textbox (Dojo should have it)
   * Document JsonRestStores, paramIds is now optional, publicURL is what counts, id fields are assigned automatically
-	- Check why adding an entry doesn't automatically position it at the end (reload after adding to see)
-		DECIDED: only accept to add as "last" for ordered and unsorted ones. Later we can add in specific spots easily
-						 but for unspecified it needs to be last 
+  - Check why adding an entry doesn't automatically position it at the end (reload after adding to see)
+    DECIDED: only accept to add as "last" for ordered and unsorted ones. Later we can add in specific spots easily
+             but for unspecified it needs to be last 
   * Fix stupid bug in JsonRestStores
   * Check why JsonRestStores sends double headers if on line 1048, _relocation is passed null rather than 'null', bad symptom
   * Test if comet does what it's meant to do when broadcasting all store cases
@@ -930,6 +944,30 @@
      X Take out "Picker" from WorkspacesContactsEmailsPicker onto its own file
      X Make sure output is different if type is "PhoneNumber"
      X Test it
-
+    X Change interface to allow editing, opening of contacts
+    X Turn contats screen into a multi-tab screen
+    X Make a new tab open reliably when contact is selected (handle multiple openings)
+    X Create screen to show a contact
+    X Write basic database fields for the 5 messages table (3 core, 2 app)
+    GUI 1/2:
+    - Add ability to add a message under a contact, no cc: (SMS/email)
+       X Body needs to reset after send
+       X Widget spacing
+       X Message is "sent" not "saved"
+       X SMS characters count
+       X SMS don't validate over X
+    - Add ability to cc other contacts, with ability to delete added contacts
+       X Add in right spot
+       X Put CC in same div so that it doesn't get separated
+       X Format names right
+       X Format PLUS properly, turn it into a button
+       X Do not repeat already inserted IDs
+       X To: added as one of the recipients, as first, not mandatory
+       X Make names look better
+       X Add X to names, delete div when pressed
+       X Delete all EXTRA To: after sending
+       X Fix breaking when selected by keyboard
+       X Improve keyboard selection, get picker to come up when typing
+       X Send the right data to the server (list of IDs)
 
 
